# habit-tracker

./: .gitignore  README.md  main.py  pyproject.toml
specs/: spec_01_habit_management.py  spec_02_logging.py  spec_03_streaks.py  spec_04_chart.py  spec_05_motivational_messages.py  spec_06_weekly_goals.py  spec_07_streak_freeze.py
src/habit_tracker/: chart.py  cli.py  db.py  habits.py  logging.py  stats.py
tests/: conftest.py  test_chart.py  test_habits.py  test_logging.py  test_stats.py
